[Wayland] Clear Recent History dropdown list items cannot be selected with the mouse
Categories
(Core :: Widget: Gtk, defect, P1)
Tracking
()
People
(Reporter: ke5trel, Assigned: jhorak)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
STR:
- Press Ctrl+Shift+Del to show the "Clear Recent History" dialog.
- Click the time range dropdown.
- Try to click on a different menu item with the mouse eg "Everything".
The dropdown menu items do not response to mouse hover or clicks. Keyboard arrow keys work.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=601b94cc2e12bb1749342266f4ee3f25121a04bf&tochange=12c004663a5c03385170eb1ac009e3bcdc2547ea
Regressed by Bug 1605795.
Updated•5 years ago
|
Comment 2•5 years ago
|
||
Hi Martin, can you please (let) set a priority here? Thank you!
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Comment 3•4 years ago
|
||
(In reply to Kestrel from comment #0)
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=601b94cc2e12bb1749342266f4ee3f25121a04bf&tochange=12c004663a5c03385170eb1ac009e3bcdc2547eaRegressed by Bug 1605795.
I think this bug is older. Downstream bug report from 2019-05-15: https://bugzilla.redhat.com/show_bug.cgi?id=1752240
Assignee | ||
Comment 4•4 years ago
•
|
||
This is because the Clear recent history
dialog is modal. It's always 'above' the Time range to clear
dropdown (dropdown does not receive the OnEnterNotify
). Setting dropdown menu be also modal somehow workaround the problem but another occurs: You cannot close the dropdown by clicking back to Clear history window
.
It seems to be related on how we're creating the popup menus. I need to investigate further the GTK3 code to find some solution - or reproduce it upstream.
Updated•4 years ago
|
(In reply to Jan Horak [:jhorak] from comment #4)
This is because the
Clear recent history
dialog is modal. It's always 'above' theTime range to clear
dropdown (dropdown does not receive theOnEnterNotify
). Setting dropdown menu be also modal somehow workaround the problem but another occurs: You cannot close the dropdown by clicking back toClear history window
.It seems to be related on how we're creating the popup menus. I need to investigate further the GTK3 code to find some solution - or reproduce it upstream.
As i mentioned in my bug report https://bugzilla.mozilla.org/show_bug.cgi?id=1650611#c3 the Flatpak Version works fine. Also there is no problem in the 'Clear history window' Dialog.
Updated•4 years ago
|
Comment 6•4 years ago
|
||
Looks like the history dialog is reworked in latest nightly and no longer uses Gtk widgets.
Comment 8•4 years ago
|
||
It's fixed by bookmark code rewrite in latest nightly.
Comment 9•4 years ago
|
||
Comment 10•4 years ago
|
||
Comment 11•4 years ago
|
||
bugherder |
Updated•4 years ago
|
Updated•4 years ago
|
Description
•