Bug 1621660 [Wayland] When parent window is modal, set modal popup child window too, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D114240